--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -198,7 +198,7 @@ ChoptankInfo <- getNWISSiteInfo(siteNumber)
 parameterCd <- "00060"
 
 #Raw daily data:
-rawDailyData <- retrieveNWISdvData(siteNumber,parameterCd,
+rawDailyData <- getNWISdvData(siteNumber,parameterCd,
                       "1980-01-01","2010-01-01")
 # Data compiled for EGRET analysis
 Daily <- getNWISDaily(siteNumber,parameterCd,
@@ -210,7 +210,7 @@ Sample <- getNWISSample(siteNumber,parameterCd,
                       "1980-01-01","2010-01-01")
 
 # Metadata on site and nitrate:
-INFO <- getMetaData(siteNumber,parameterCd)
+INFO <- getNWISInfo(siteNumber,parameterCd)
 
 # Merge discharge and nitrate data to one dataframe:
 Sample <- mergeReport()
@@ -388,7 +388,7 @@ Parameter information can obtained from \url{http://nwis.waterdata.usgs.gov/usa/
 \subsection{Daily Values}
 \label{sec:usgsDaily}
 %------------------------------------------------------------
-To obtain daily records of USGS data, use the \texttt{retrieveNWISdvData} function. The arguments for this function are siteNumber, parameterCd, startDate, endDate, statCd, and a logical (TRUE/FALSE) interactive. There are 2 default arguments: statCd (defaults to \texttt{"}00003\texttt{"}), and interactive (defaults to TRUE).  If you want to use the default values, you do not need to list them in the function call. By setting the \texttt{"}interactive\texttt{"} option to FALSE, the operation of the function will advance automatically. It might make more sense to run large batch collections with the interactive option set to FALSE. 
+To obtain daily records of USGS data, use the \texttt{getNWISdvData} function. The arguments for this function are siteNumber, parameterCd, startDate, endDate, statCd, and a logical (TRUE/FALSE) interactive. There are 2 default arguments: statCd (defaults to \texttt{"}00003\texttt{"}), and interactive (defaults to TRUE).  If you want to use the default values, you do not need to list them in the function call. By setting the \texttt{"}interactive\texttt{"} option to FALSE, the operation of the function will advance automatically. It might make more sense to run large batch collections with the interactive option set to FALSE. 
 
 The dates (start and end) must be in the format \texttt{"}YYYY-MM-DD\texttt{"} (note: the user must include the quotes).  Setting the start date to \texttt{"}\texttt{"} (no space) will prompt the program to ask for the earliest date, and setting the end date to \texttt{"}\texttt{"} (no space) will prompt for the latest available date.
 
@@ -400,7 +400,7 @@ parameterCd <- "00060"  # Discharge
 startDate <- ""  # Will request earliest date
 endDate <- "" # Will request latest date
 
-discharge <- retrieveNWISdvData(siteNumber, 
+discharge <- getNWISdvData(siteNumber, 
                     parameterCd, startDate, endDate)
 names(discharge)
 @
@@ -416,7 +416,7 @@ statCd <- c("00001","00003")  # Mean and maximum
 startDate <- "2012-01-01"
 endDate <- "2012-05-01"
 
-temperatureAndFlow <- retrieveNWISdvData(siteNumber, parameterCd, 
+temperatureAndFlow <- getNWISdvData(siteNumber, parameterCd, 
         startDate, endDate, statCd=statCd)
 
 @
@@ -463,14 +463,14 @@ There are occasions where NWIS values are not reported as numbers, instead there
 \subsection{Unit Values}
 \label{sec:usgsRT}
 %------------------------------------------------------------
-Any data collected at regular time intervals (such as 15-minute or hourly) are known as \enquote{unit values.} Many of these are delivered on a real time basis and very recent data (even less than an hour old in many cases) are available through the function \texttt{retrieveNWISunitData}.  Some of these unit values are available for many years, and some are only available for a recent time period such as 120 days.  Here is an example of a retrieval of such data.  
+Any data collected at regular time intervals (such as 15-minute or hourly) are known as \enquote{unit values.} Many of these are delivered on a real time basis and very recent data (even less than an hour old in many cases) are available through the function \texttt{getNWISunitData}.  Some of these unit values are available for many years, and some are only available for a recent time period such as 120 days.  Here is an example of a retrieval of such data.  
 
 <<label=getNWISUnit, echo=TRUE>>=
 
 parameterCd <- "00060"  # Discharge
 startDate <- "2012-05-12" 
 endDate <- "2012-05-13" 
-dischargeToday <- retrieveNWISunitData(siteNumber, parameterCd, 
+dischargeToday <- getNWISunitData(siteNumber, parameterCd, 
         startDate, endDate)
 @
 
@@ -491,7 +491,7 @@ Note that time now becomes important, so the variable datetime is a POSIXct, and
 \subsection{Water Quality Values}
 \label{sec:usgsWQP}
 %------------------------------------------------------------
-To get USGS water quality data from water samples collected at the streamgage or other monitoring site (as distinct from unit values collected through some type of automatic monitor) we can use the function \texttt{retrieveNWISqwData}, with the input arguments: siteNumber, parameterCd, startDate, endDate, and interactive (similar to \texttt{retrieveNWISunitData} and \texttt{retrieveNWISdvData}). Additionally, the argument \texttt{"}expanded\texttt{"} is a logical input that allows the user to choose between a simple return of datetimes/qualifier/values (expanded=FALSE), or a more complete and verbose output (expanded=TRUE). Expaned = TRUE includes such columns as remark codes, value qualifying text, and detection level.
+To get USGS water quality data from water samples collected at the streamgage or other monitoring site (as distinct from unit values collected through some type of automatic monitor) we can use the function \texttt{getNWISqwData}, with the input arguments: siteNumber, parameterCd, startDate, endDate, and interactive (similar to \texttt{getNWISunitData} and \texttt{getNWISdvData}). Additionally, the argument \texttt{"}expanded\texttt{"} is a logical input that allows the user to choose between a simple return of datetimes/qualifier/values (expanded=FALSE), or a more complete and verbose output (expanded=TRUE). Expaned = TRUE includes such columns as remark codes, value qualifying text, and detection level.
 
 
 <<label=getQW, echo=TRUE>>=
@@ -501,7 +501,7 @@ parameterCd <- c("00618","71851")
 startDate <- "1985-10-01"
 endDate <- "2012-09-30"
 
-dissolvedNitrate <- retrieveNWISqwData(siteNumber, parameterCd, 
+dissolvedNitrate <- getNWISqwData(siteNumber, parameterCd, 
       startDate, endDate, expanded=TRUE)
 names(dissolvedNitrate)
 
@@ -544,11 +544,11 @@ url_uv <- constructNWISURL(siteNumber,"00060",startDate,endDate,'uv')
 \section{Water Quality Portal Web Retrievals}
 \label{sec:usgsSTORET}
 %------------------------------------------------------------
-There are additional water quality data sets available from the Water Quality Data Portal (\url{http://www.waterqualitydata.us/}).  These data sets can be housed in either the STORET (data from EPA), NWIS database (data from USGS), STEWARDS database (USDA), and additional databases are slated to be included.  Because only USGS uses parameter codes, a \texttt{"}characteristic name\texttt{"} must be supplied.  The \texttt{retrieveWQPqwData} function can take either a USGS parameter code, or a more general cahracteristic name in the parameterCd input argument. The Water Quality Data Portal includes data discovery tools and information on characteristic names. The following example retrieves specific conductance from a DNR site in Wisconsin. 
+There are additional water quality data sets available from the Water Quality Data Portal (\url{http://www.waterqualitydata.us/}).  These data sets can be housed in either the STORET (data from EPA), NWIS database (data from USGS), STEWARDS database (USDA), and additional databases are slated to be included.  Because only USGS uses parameter codes, a \texttt{"}characteristic name\texttt{"} must be supplied.  The \texttt{getWQPqwData} function can take either a USGS parameter code, or a more general cahracteristic name in the parameterCd input argument. The Water Quality Data Portal includes data discovery tools and information on characteristic names. The following example retrieves specific conductance from a DNR site in Wisconsin. 
 
 
 <<label=getQWData, echo=TRUE, eval=FALSE>>=
-specificCond <- retrieveWQPqwData('WIDNR_WQX-10032762',
+specificCond <- getWQPqwData('WIDNR_WQX-10032762',
                 'Specific conductance','2011-05-01','2011-09-30')
 @
 
@@ -671,11 +671,11 @@ In this section, we use 3 dataRetrieval functions to get sufficient data to perf
 \subsection{INFO Data}
 \label{INFOsubsection}
 %------------------------------------------------------------
-The \texttt{getMetaData} function obtains metadata, or data about the streamgage and measured parameters. This function combines \texttt{getNWISSiteInfo} and \texttt{getNWISPcodeInfo}, producing one dataframe called INFO.
+The \texttt{getNWISInfo} function obtains metadata, or data about the streamgage and measured parameters. This function combines \texttt{getNWISSiteInfo} and \texttt{getNWISPcodeInfo}, producing one dataframe called INFO.
 
 <<ThirdExample>>=
 parameterCd <- "00618"
-INFO <-getMetaData(siteNumber,parameterCd, interactive=FALSE)
+INFO <-getNWISInfo(siteNumber,parameterCd, interactive=FALSE)
 @
 
 
@@ -728,7 +728,7 @@ Notice that the \enquote{Day of the year} column can span from 1 to 366. The 366
 \subsection{Sample Data}
 \label{Samplesubsection}
 %------------------------------------------------------------
-The \texttt{getNWISSample} function retrieves USGS sample data from NWIS. The arguments for this function are also siteNumber, parameterCd, startDate, endDate, interactive. These are the same inputs as \texttt{retrieveWQPqwData} or \texttt{getWQPData} as described in the previous section.
+The \texttt{getNWISSample} function retrieves USGS sample data from NWIS. The arguments for this function are also siteNumber, parameterCd, startDate, endDate, interactive. These are the same inputs as \texttt{getWQPqwData} or \texttt{getWQPData} as described in the previous section.
 
 <<secondExample>>=
 parameterCd <- "00618"
@@ -825,7 +825,7 @@ print(xTab,
 
 @
 
-The dataRetrieval package will \enquote{add up} all the values in a given row to form the total for that sample when using the Sample dataframe. Thus, you only want to enter data that should be added together. If you want a dataframe with multiple constituents that are not summed, do not use getNWISSample, getWQPSample, or getUserSample. The raw data functions: \texttt{getWQPData}, \texttt{retrieveNWISqwData}, \texttt{retrieveWQPqwData}, \texttt{getWQPData} will not sum constituents, but leave them in their individual columns. 
+The dataRetrieval package will \enquote{add up} all the values in a given row to form the total for that sample when using the Sample dataframe. Thus, you only want to enter data that should be added together. If you want a dataframe with multiple constituents that are not summed, do not use getNWISSample, getWQPSample, or getUserSample. The raw data functions: \texttt{getWQPData}, \texttt{getNWISqwData}, \texttt{getWQPqwData}, \texttt{getWQPData} will not sum constituents, but leave them in their individual columns. 
 
 For example, we might know the value for dp on 5/30/2005, but we don't want to put it in the table because under the rules of this data set, we are not supposed to add it in to the values in 2005.
 
@@ -995,17 +995,17 @@ Tables \ref{tab:dataRetrievalFunctions1},\ref{tab:dataRetrievalOrg}, and \ref{ta
 \multicolumn{1}{c}{\textbf{\textsf{Function Name}}} &
 \multicolumn{1}{c}{\textbf{\textsf{Description}}} \\ [0pt]
   \hline
-  Daily & \texttt{retrieveNWISdvData} & Raw USGS daily data \\ 
+  Daily & \texttt{getNWISdvData} & Raw USGS daily data \\ 
   [5pt]Daily\tnote{1} & \texttt{getNWISDaily} & USGS daily values \\ 
   [5pt]Daily\tnote{1} & \texttt{getUserDaily} & User generated daily data \\ 
-  [5pt]Sample & \texttt{retrieveNWISqwData} & Raw USGS water quality data \\
-  [5pt]Sample & \texttt{retrieveWQPqwData} & Raw Water Quality Data Portal data \\ 
+  [5pt]Sample & \texttt{getNWISqwData} & Raw USGS water quality data \\
+  [5pt]Sample & \texttt{getWQPqwData} & Raw Water Quality Data Portal data \\ 
   [5pt]Sample & \texttt{getWQPData} & General Water Quality Portal\\
   [5pt]Sample\tnote{1} & \texttt{getNWISSample} & USGS water quality data\\
   [5pt]Sample\tnote{1} & \texttt{getWQPSample} & Water Quality Data Portal data \\
   [5pt]Sample\tnote{1} & \texttt{getUserSample} & User generated sample data \\ 
-  [5pt]Unit & \texttt{retrieveNWISunitData} & Raw USGS instantaneous data \\
-  [5pt]Information\tnote{1} & \texttt{getMetaData} & USGS station and parameter code information \\ 
+  [5pt]Unit & \texttt{getNWISunitData} & Raw USGS instantaneous data \\
+  [5pt]Information\tnote{1} & \texttt{getNWISInfo} & USGS station and parameter code information \\ 
   [5pt]Information & \texttt{getNWISPcodeInfo} & USGS parameter code information \\ 
   [5pt]Information & \texttt{getNWISSiteInfo} & USGS station information \\ 
   [5pt]Information & \texttt{getNWISDataAvailability} & Data available at USGS stations \\ 
@@ -1013,7 +1013,7 @@ Tables \ref{tab:dataRetrievalFunctions1},\ref{tab:dataRetrievalOrg}, and \ref{ta
 \end{tabular}
 
   \begin{tablenotes}
-    \item[1] Indicates that the function creates a data frame suitable for use in EGRET software
+    \item[1] Indicates that the function creates a data frame suitable for use in EGRET software, otherwise data is returned in the exact form that it was received.
   \end{tablenotes}
  \end{threeparttable}
 }
@@ -1023,36 +1023,39 @@ Tables \ref{tab:dataRetrievalFunctions1},\ref{tab:dataRetrievalOrg}, and \ref{ta
 \begin{table}[!ht]
 \begin{minipage}{\linewidth}
 {\footnotesize
+\begin{threeparttable}[b]
 \caption{dataRetrieval functions organization} 
 \label{tab:dataRetrievalOrg}
-\hspace*{-1.5cm}
-\begin{tabular}{|c|cccc|}
+\begin{tabular}{|c|ccc|}
 
-\multicolumn{1}{c}{\textbf{\textsf{Source}}} &
+\multicolumn{1}{c}{\textbf{\textsf{}}} &
 \multicolumn{1}{c}{\textbf{\textsf{Site Query}}} &
 \multicolumn{1}{c}{\textbf{\textsf{Meta Data}}} &
-\multicolumn{1}{c}{\textbf{\textsf{Raw Data}}} &
-\multicolumn{1}{c}{\textbf{\textsf{EGRET Data}}} \\  [0pt]
+\multicolumn{1}{c}{\textbf{\textsf{Data Retrieval}}} \\  [0pt]
 \hline
-\textbf{NWIS:} & \texttt{getNWISSites} & & \texttt{getNWISData} &  \\
-\textit{Daily} &  & \texttt{getNWISSiteInfo} & \texttt{retrieveNWISdvData} & \texttt{getNWISDaily} \\
-\textit{Unit/Instantaneous} & \texttt{getNWISDataAvailability} & \texttt{getNWISPcodeInfo} & \texttt{retrieveNWISunitData} &  \\
-\textit{Groundwater} & & \texttt{getNWISInfo} &  &  \\
-\textit{Water Quality} & & & \texttt{retrieveNWISqwDAta} & \texttt{getNWISSample}\\
+\textbf{NWIS:} & \texttt{getNWISSites} & \texttt{getNWISInfo}\tnote{1} & \texttt{getNWISData}  \\
+\textit{Daily} & \texttt{getNWISDataAvailability}& \texttt{getNWISSiteInfo} & \texttt{getNWISDaily}\tnote{1} \\
+\textit{Unit/Instantaneous} &  & \texttt{getNWISPcodeInfo} & \texttt{getNWISSample}\tnote{1} \\
+\textit{Groundwater} & &  & \texttt{getNWISdvData}   \\
+\textit{Water Quality} & & & \texttt{getNWISunitData}\\
+ & & & \texttt{getNWISqwData} \\
 \hline
-\textbf{Water Quality Portal:} & \texttt{getWQPSites} & \texttt{getWQPInfo} & \texttt{retrieveWQPqwData} & \texttt{getWQPSample} \\
-\textit{USGS} & & & \texttt{getWQPData} & \\
-\textit{EPA} & & & & \\
-\textit{USDA} & & & & \\
+\textbf{Water Quality Portal:} & \texttt{getWQPSites} & \texttt{getWQPInfo}\tnote{1} &  \texttt{getWQPSample}\tnote{1}\\
+\textit{USGS} & & & \texttt{getWQPqwData} \\
+\textit{EPA} & & & \texttt{getWQPData} \\
+\textit{USDA} & & &  \\
 \hline
-\textbf{User-supplied files:} & &  & &  \\
-\textit{Daily} & & & &  \texttt{getUserDaily}\\
-\textit{Sample} & & & & \texttt{getUserSample}\\
-\textit{Site Information} & & \texttt{getUserInfo} & & \\
+\textbf{User-supplied files:} & & \texttt{getUserInfo}\tnote{1}  & \texttt{getUserDaily}\tnote{1}  \\
+\textit{Daily} & & & \texttt{getUserSample}\tnote{1}  \\
+\textit{Sample} & & &  \\
+\textit{Site Information} & & & \\
 
    \hline
 \end{tabular}
-\hspace*{-1.5cm}
+  \begin{tablenotes}
+    \item[1] Indicates that the function creates a data frame suitable for use in EGRET software, otherwise data is returned in the exact form that it was received.
+  \end{tablenotes}
+ \end{threeparttable}
 }
 \end{minipage}
 \end{table}
@@ -1062,7 +1065,7 @@ Tables \ref{tab:dataRetrievalFunctions1},\ref{tab:dataRetrievalOrg}, and \ref{ta
 \begin{table}[!ht]
 \begin{minipage}{\linewidth}
 {\footnotesize
-\caption{dataRetrieval function organization} 
+\caption{Supplemental dataRetrieval functions} 
 \label{tab:dataRetrievalMisc}
 \begin{tabular}{ll}
   \hline
