--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-dataRetrieval 1.4.0
+dataRetrieval 1.4.0-in developement
 ===========
 * Changed naming convention:
 getDVData -> getNWISDaily
@@ -10,6 +10,7 @@ getMetaData -> splits into getNWISInfo and getUserInfo
 getSiteFileData <- getNWISSiteInfo
 getParameterInfo <- getNWISPcodeInfo
 getDataAvailability <- getNWISDataAvailability
+'retrieve' functions changed to 'get'
 * Changed WaterML2 rbind fill from plyr function to dplyr. Removed plyr import, added dplyr.
 *
 
